fix for 20848;UI changes for compose window;sr=sspitzer

--- a/mozilla/mailnews/compose/resources/locale/en-US/composeMsgs.properties
+++ b/mozilla/mailnews/compose/resources/locale/en-US/composeMsgs.properties
@@ -214,11 +214,11 @@ saveDlogDontSaveBtn=Don't Save
 saveDlogCancelBtn=Cancel
 
 ## generics string
-defaultSubject=(no subject)
+defaultSubject=<subject>
 chooseFileToAttach=Enter file to attach
 
 ##
-windowTitlePrefix=Compose:
+windowTitlePrefix=Write:
 
 ## String used by the dialog that ask the user to enter a subject
 subjectDlogTitle=Send Message
