--- a/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
+++ b/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
@@ -119,7 +119,7 @@ trashFolderName=Trash
 sentFolderName=Sent
 draftsFolderName=Drafts
 templatesFolderName=Templates
-unsentFolderName=Unsent Messages
+unsentFolderName=Unsent Mail
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTES (specialFolderDeletionErr): Do not translate "IMAP" in the line below
