--- a/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
+++ b/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
@@ -111,7 +111,7 @@ totalMsgStatus=Total: %S
 
 # localized folder names
 
-localFolders=Personal Filing Cabinet
+localFolders=Filing Cabinet
 
 # LOCALIZATION NOTES (inboxFolderName): OK to translate all foldernames, bugzilla #57440 & bugzilla #23625 fixed
 inboxFolderName=Inbox
