--- a/mozilla/mailnews/imap/resources/locale/en-US/imapMsgs.properties
+++ b/mozilla/mailnews/imap/resources/locale/en-US/imapMsgs.properties
@@ -295,7 +295,7 @@
 
 ## @name IMAP_PERSONAL_FILING_CABINET
 ## @loc None
-5062=Personal Filing Cabinet
+5062=Filing Cabinet
 
 ## @name IMAP_PFC_READ_MAIL
 ## @loc None
