fix for 20786;removing Window menu item and moving Mail and Addressbook menu items to Tools menu; moving menu items from tasksOverlay.xul to mailTasksOverlay.xul;sr=sspitzer

--- a/mozilla/mailnews/base/resources/locale/en-US/mailTasksOverlay.dtd
+++ b/mozilla/mailnews/base/resources/locale/en-US/mailTasksOverlay.dtd
@@ -10,6 +10,9 @@
 <!ENTITY taskMessenger.tooltip  "Mail &amp; Newsgroups">
 <!ENTITY taskAddressBook.tooltip  "Address Book">
 
+<!ENTITY tasksMenu.label "Tools">
+<!ENTITY tasksMenu.accesskey "T"> 
+
 <!-- searchAddressesCmd is also used by addressbook -->
 <!ENTITY searchAddressesCmd.label                       "Search Addresses...">
 <!ENTITY searchAddressesCmd.accesskey                   "A">
