--- a/mozilla/camino/resources/application/WebsiteDefaults.strings
+++ b/mozilla/camino/resources/application/WebsiteDefaults.strings
@@ -1,6 +1,6 @@
 HomePageDefault = "http://www.mozilla.org/projects/chimera/";
 SearchPageDefault = "http://www.google.com/";
 StartPageDefault = "about:blank";
-ThrobberPageDefault = "http://www.mozilla.org";
+ThrobberPageDefault = "http://www.mozilla.org/projects/chimera/";
 FeedbackPageDefault = "http://www.mozilla.org/projects/chimera/feedback.html";
 InfoPageDefault = "http://www.mozilla.org/projects/chimera/";
