--- a/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
+++ b/mozilla/mailnews/base/resources/locale/en-US/messenger.properties
@@ -214,8 +214,8 @@ attachmentDisplayNameFormat=%S %S
 103=Could not connect to server %S; the connection was refused.
 104=Connection to server %S timed out.
 
-recipientSearchCriteria=Subject or Recipient contains:
-senderSearchCriteria=Subject or Sender contains:
+recipientSearchCriteria=Search for Subject or Recipient:
+senderSearchCriteria=Search for Subject or Sender:
 
 # LOCALIZATION NOTES(biffNotification): %1$S is a user name %2$S is the number of new messages  
 biffNotification_message=%1$S has %2$S new message
