--- a/mozilla/mailnews/base/resources/locale/en-US/messenger.dtd
+++ b/mozilla/mailnews/base/resources/locale/en-US/messenger.dtd
@@ -433,6 +433,7 @@ Rights Reserved.
 <!ENTITY replyAllButton.label "Reply All">
 <!ENTITY forwardButton.label "Forward">
 <!ENTITY fileButton.label "Save">
+<!ENTITY previousButton.label "Previous">
 <!ENTITY nextButton.label "Next">
 <!ENTITY deleteButton.label "Delete">
 <!ENTITY markButton.label "Mark">
@@ -451,6 +452,7 @@ Rights Reserved.
 <!ENTITY forwardButton.tooltip "Forward selected message">
 <!ENTITY fileButton.tooltip "File selected message">
 <!ENTITY nextButton.tooltip "Move to the next unread message">
+<!ENTITY previousButton.tooltip "Move to the previous unread message">
 <!ENTITY deleteButton.tooltip "Delete selected message or folder">
 <!ENTITY markButton.tooltip "Mark messages">
 <!ENTITY printButton.tooltip "Print this message">
