--- a/mozilla/xpfe/components/prefwindow/resources/locale/en-US/pref-mousewheel.dtd
+++ b/mozilla/xpfe/components/prefwindow/resources/locale/en-US/pref-mousewheel.dtd
@@ -1,8 +1,8 @@
 <!-- LOCALIZATION NOTE : FILE Mouse-wheel management prefs, for those lucky OSes that support mouse wheels -->
 
 <!ENTITY title.label                  "Mouse Wheel">
-<!ENTITY mouseWheelTitle.label        "Mouse wheel configuration">
-<!ENTITY mouseWheelPanel.label        "Specify mouse wheel behavior when used with this modifier key: ">
+<!ENTITY mouseWheelTitle.label        "Mouse wheel behavior">
+<!ENTITY mouseWheelPanel.label        "When used with this modifier key: ">
 <!ENTITY mouseWheelPanel.accesskey    "w">
 <!ENTITY usingJustTheWheel.label      "No modifier key">
 <!ENTITY usingWheelAndAlt.label       "&altKey.label;">
