--- a/mozilla/mailnews/base/prefs/resources/locale/en-US/mailPrefsOverlay.dtd
+++ b/mozilla/mailnews/base/prefs/resources/locale/en-US/mailPrefsOverlay.dtd
@@ -11,8 +11,11 @@
 <!ENTITY disableImageInMailNews.accesskey   "i">
 
 <!ENTITY mail.label "Mail &amp; Newsgroups">
+<!ENTITY mailonly.label "General">
 <!ENTITY mail.accesskey "m">
 <!ENTITY address.label "Addressing">
+<!ENTITY windows.label "Windows">
+<!ENTITY languages.label "Languages">
 <!ENTITY viewingMessages.label "Message Display">
 <!ENTITY composingMessages.label "Composition">
 <!ENTITY format.label "Send Format">
