--- a/mozilla/mailnews/base/prefs/resources/locale/en-US/pref-mailnews.dtd
+++ b/mozilla/mailnews/base/prefs/resources/locale/en-US/pref-mailnews.dtd
@@ -19,12 +19,11 @@ Rights Reserved.
 --> 
 
 <!ENTITY pane.title                       "Mail &amp; Newsgroups">
+<!ENTITY mailonlyPane.title               "General">
 
 <!ENTITY windowSettings.label             "General Settings">
 <!ENTITY selectWindowLayout.label         "Select the window layout you prefer for Mail:">
 <!ENTITY chooseExp.label                  "Note: For this setting to take effect, you will need to exit and then restart Mail.">
-<!ENTITY warnOnSendAccelKey.label         "Confirm when using keyboard shortcut to send message">
-<!ENTITY warnOnSendAccelKey.accesskey      "o">
 <!ENTITY newMessagesArrive.label          "When new messages arrive:">
 <!ENTITY playSound.label                  "Play a sound">
 <!ENTITY playSound.accesskey              "P">
