--- a/mozilla/security/manager/pki/resources/locale/en-US/pref-security.dtd
+++ b/mozilla/security/manager/pki/resources/locale/en-US/pref-security.dtd
@@ -27,12 +27,12 @@
 
 <!ENTITY  resetsettings.label    "Reset Settings">
 <!ENTITY  resetpreferences.label "Reset Preferences...">
-<!ENTITY  managecerts.label      "Manage Certificates">
+<!ENTITY  managecerts.label      "Certificates">
 <!ENTITY  managecerts.text       "Use the Certificate Manager to manage your personal certificates, as well as those of other people and certificate authorities.">
 <!ENTITY  managecerts.button     "Manage Certificates...">
-<!ENTITY  managedevices.label    "Manage Security Devices">
+<!ENTITY  managedevices.label    "Security Devices">
 <!ENTITY  managedevices.text     "Use this button to manage your security devices, such as smart cards.">
-<!ENTITY  managedevices.button   "Manage Security Devices...">
+<!ENTITY  managedevices.button   "Security Devices...">
 
 <!ENTITY  ssl.label              "SSL">
 
