adding pref UI, and default pref, for the "show online state in message headers" feature.

--- a/mozilla/mailnews/base/prefs/resources/locale/en-US/pref-viewing_messages.dtd
+++ b/mozilla/mailnews/base/prefs/resources/locale/en-US/pref-viewing_messages.dtd
@@ -51,3 +51,5 @@ Rights Reserved.
 <!ENTITY convertEmoticons.accesskey       "d">
 <!ENTITY example1.label                   "For example, display ' :-) ' as">
 <!ENTITY example2.label                   ".">
+<!ENTITY instantMessengerInMail.label     "Instant Messenger In Mail">
+<!ENTITY onlineState.label                "Show online state in message envelope">
