dirty deeds, done dirt cheap.

--- a/mozilla/profile/resources/locale/en-US/profileManager.properties
+++ b/mozilla/profile/resources/locale/en-US/profileManager.properties
@@ -22,7 +22,7 @@ ps_title=Select User Profile
 pm_button=Back...
 ps_button=Manage Profiles...
 
-startButton=Start %brandShortName%
+startButton=Sign On
 exitButton=Exit
 
 cancel=Cancel
