--- a/mozilla/chimera/resources/application/WebsiteDefaults.strings
+++ b/mozilla/chimera/resources/application/WebsiteDefaults.strings
@@ -1,6 +1,6 @@
-HomePageDefault = "http://www.mozilla.org/projects/chimera/";
+HomePageDefault = "http://www.mozilla.org/projects/chimera/homepage.html";
 SearchPageDefault = "http://www.google.com/";
-StartPageDefault = "about:blank";
+StartPageDefault = "http://www.mozilla.org/projects/chimera/welcome.html";
 ThrobberPageDefault = "http://www.mozilla.org/projects/chimera/";
 FeedbackPageDefault = "http://www.mozilla.org/projects/chimera/feedback.html";
 InfoPageDefault = "http://www.mozilla.org/projects/chimera/";
