--- a/mozilla/xpfe/global/resources/locale/en-US/brand.dtd
+++ b/mozilla/xpfe/global/resources/locale/en-US/brand.dtd
@@ -1,6 +1,6 @@
 <!-- Separate the ever-changing version info to avoid merge conflicts -->
 
-<!ENTITY  lang.version          "1.0.1rc1">
+<!ENTITY  lang.version          "1.0.2">
 
 <!-- Mozilla looks here for locale (theme?) versions, and refuses to use
      the locale, if it doesn't match. -->
